cloudformation/empapp.yml
Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

Resources:
  #our EC2 security group
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and access to mysql db
      SecurityGroupIngress:
      - CidrIp: 172.31.0.0/16
        FromPort: 3306
        IpProtocol: tcp
        ToPort: 3306
      - CidrIp: 24.26.206.65/16
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22
      - CidrIp: 24.26.206.65/16
        FromPort: 80
        IpProtocol: tcp
        ToPort: 80
      - CidrIp: 24.26.206.65/16
        FromPort: 3306
        IpProtocol: tcp
        ToPort: 3306

  Cluster:
      Type: AWS::ECS::Cluster
      Properties:
        ClusterName: EmpAppCluster

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    DependsOn: EmpAppRDS
    Properties: 
      NetworkMode: awsvpc
      RequiresCompatibilities:
      - FARGATE
      Cpu: 256
      Memory: 0.5GB
      ExecutionRoleArn: arn:aws:iam::793465516547:role/EmpAppExecutionRole
      TaskRoleArn: arn:aws:iam::793465516547:role/EmpAppTaskRole
      ContainerDefinitions:
      - Name: EmpAppService
        Image: 793465516547.dkr.ecr.us-east-2.amazonaws.com/awsflaskdemo
        PortMappings:
        - ContainerPort: 80
          HostPort: 80
          Protocol: TCP

  EmpAppRDS:
    Type: AWS::RDS::DBInstance
    Properties:
      AvailabilityZone: us-east-2b
      DBName: employee
      VPCSecurityGroups: 
        - !GetAtt EC2SecurityGroup.GroupId
      AllocatedStorage: '5'
      DBInstanceClass: db.t3.micro
      Engine: MySQL
      EngineVersion: '8.0.17'
      MasterUsername: admin
      MasterUserPassword: '{{resolve:secretsmanager:RDSPass:SecretString}}'
      StorageEncrypted: true
      BackupRetentionPeriod: 0
  
  RDSEndpointSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: RDSEndpoint
      Description: This holds the rds enpoint to be used by the app after deployment
      SecretString: !GetAtt EmpAppRDS.Endpoint.Address

  RDSPassSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: RDSPass
      Description: This holds the rds password to be used by cf and the app after deployment
      GenerateSecretString:
        ExcludeCharacters: '"@/\'
        PasswordLength: 24

  S3Bucket:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: pcty-employee
      AccessControl: Private
      BucketEncryption: 
        ServerSideEncryptionConfiguration: 
        - ServerSideEncryptionByDefault:
            SSEAlgorithm: AES256

  RDSSetupFunction:
    Type: AWS::Lambda::Function
    DependsOn: EmpAppRDS
    Properties:
      Handler: empAppRdsSetup.py
      Role: arn:aws:iam::793465516547:role/EmpAppRdsSetupLambdaRole
      Code:
        S3Bucket: pcty-lambda-bucket
        S3Key: empAppRdsSetup.zip
      Runtime: python3.9
      Timeout: 900
      TracingConfig:
        Mode: Active
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt EC2SecurityGroup.GroupId
        SubnetIds:
          - subnet-098188ccbe49d334b
          - subnet-0d2b9e63cd65bc742
          - subnet-074c5aa7a556836e7

  RDSSetupTopic:
    Type: AWS::SNS::Topic

  RDSSetupFunctionSubsciptions:
    Type: AWS::SNS::Subscription
    Properties:
      TopicArn: !Ref RDSSetupTopic
      Endpoint: !GetAtt RDSSetupFunction.Arn
      Protocol: lambda
  
  RDSCreatedNotification:
    Type: Custom::NotifyRDSCreated
    Version: '1.0'
    DependsOn: RDSSetupFunction
    Properties:
      ServiceToken: !Ref RDSSetupTopic
